--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
           <a class="nav-link" href="#about">Giới thiệu</a>
           <a class="nav-link" href="#services">Dịch vụ</a>
           <a class="nav-link" href="#projects">Dự án</a>
-          <a class="nav-link" href="#contact">Liên hệ</a>
+          <a class="nav-link" href="#process">Quy trình</a>
+          <a class="nav-link" href="#explore">Khám phá</a>
+
         </nav>
       </div>
     </header>
@@ -167,52 +169,144 @@
         </div>
       </section>
 
-      
-
-      <section id="contact" class="cta section">
-        <div class="container cta-inner">
-          <h3>Sẵn sàng nâng cấp giao diện của bạn?</h3>
-          <a class="btn btn-primary" href="#">Liên hệ ngay</a>
+     <!-- Testimonials -->
+     <section id="testimonials" class="testimonials section" aria-labelledby="testimonials-title">
+      <div class="container testimonials-grid">
+        <div class="testimonials-title-wrap">
+          <h2 id="testimonials-title" class="testimonials-head">Khách hàng nói gì<br />về chúng tôi?</h2>
         </div>
-      </section>
-    </main>
-
-    <footer class="footer site-footer" role="contentinfo">
-      <div class="container footer-grid">
-        <div class="footer-col">
-          <div class="footer-brand">DaIU</div>
-          <p class="footer-tagline">Thiết kế UI/UX tinh tế, hiện đại và nhất quán cho thương hiệu.</p>
-        </div>
-        <nav class="footer-col" aria-label="Liên kết nhanh">
-          <h4 class="footer-title">Liên kết</h4>
-          <ul class="footer-links">
-            <li><a href="#hero">Trang chủ</a></li>
-            <li><a href="#about">Giới thiệu</a></li>
-            <li><a href="#services">Dịch vụ</a></li>
-            <li><a href="#projects">Dự án</a></li>
-            <li><a href="#contact">Liên hệ</a></li>
-          </ul>
-        </nav>
-        <div class="footer-col">
-          <h4 class="footer-title">Liên hệ</h4>
-          <p class="footer-contact">Email: contact@daiu.studio</p>
-          <div class="footer-socials">
-            <a class="social fb" href="#" aria-label="Facebook" title="Facebook">
-              <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M22 12.06C22 6.5 17.52 2 12 2S2 6.5 2 12.06C2 17.08 5.66 21.21 10.44 22v-7.01H7.9v-2.93h2.54V9.85c0-2.51 1.49-3.9 3.77-3.9 1.09 0 2.23.2 2.23.2v2.45h-1.25c-1.23 0-1.62.77-1.62 1.56v1.87h2.76l-.44 2.93h-2.32V22C18.34 21.21 22 17.08 22 12.06Z"/></svg>
-            </a>
-            <a class="social ig" href="#" aria-label="Instagram" title="Instagram">
-              <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7m5 3a5 5 0 1 1 0 10a5 5 0 0 1 0-10m0 2.2a2.8 2.8 0 1 0 0 5.6a2.8 2.8 0 0 0 0-5.6M18 6.5a1 1 0 1 1 0 2a1 1 0 0 1 0-2Z"/></svg>
-            </a>
-            <a class="social tt" href="#" aria-label="TikTok" title="TikTok">
-              <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M21 8.5v3.02a8.53 8.53 0 0 1-4.8-1.54v6.27a5.75 5.75 0 1 1-5.75-5.75c.25 0 .5.02.73.06v3.12a2.65 2.65 0 1 0 1.81 2.51V2.98h3.03a4.85 4.85 0 0 0 4.98 4.85Z"/></svg>
-            </a>
+        <div class="testimonials-card" role="list">
+          <div class="tc-header">
+            <h3 class="tc-title">Mỗi dự án là một câu chuyện.</h3>
+            <p class="tc-lead">DaIU tự hào khi được đồng hành cùng những thương hiệu truyền cảm hứng và nhận lại sự tin tưởng từ khách hàng khắp lĩnh vực.</p>
+          </div>
+          <div class="tc-item" role="listitem">
+            <div class="tc-icon" aria-hidden="true">💬</div>
+            <p class="tc-quote">“DaIU đã biến ý tưởng <strong>‘thiên nhiên thuần khiết’</strong> của Lush & Leaf thành giao diện <strong>nhẹ nhàng, đầy sức sống</strong>.”</p>
+            <div class="tc-author">— Lush & Leaf – Cửa hàng cây cảnh & décor—</div>
+          </div>
+          <div class="tc-item" role="listitem">
+            <div class="tc-icon" aria-hidden="true">💭</div>
+            <p class="tc-quote">“MindForge có được diện mạo UI <strong>hiện đại, sắc nét</strong> và <strong>đậm chất công nghệ</strong> – đúng như tinh thần AI.”</p>
+            <div class="tc-author">— MindForge – Startup AI—</div>
+          </div>
+          <div class="tc-item" role="listitem">
+            <div class="tc-icon" aria-hidden="true">💬</div>
+            <p class="tc-quote">“DaIU giúp chúng tôi thể hiện <strong>sự sáng tạo</strong> mà vẫn giữ được tính <strong>thẩm mỹ và chuyên nghiệp</strong>.”</p>
+            <div class="tc-author">— Inkspire – Studio nghệ thuật—</div>
           </div>
         </div>
       </div>
-      <div class="container footer-bottom">
-        <p>© <span id="year"></span> DaIU. All rights reserved.</p>
+    </section> 
+
+      <!-- Explore -->
+      <section id="explore" class="explore section" aria-labelledby="explore-title">
+        <div class="container explore-grid">
+          <div class="explore-copy">
+            <h2 id="explore-title" class="explore-head">Khám phá</h2>
+            <p class="explore-lead">Mỗi giao diện là một hành trình sáng tạo – nơi DaIU chuyển hóa ý tưởng thương hiệu thành trải nghiệm thị giác sống động và tinh tế.</p>
+            <a class="explore-link" href="#">Xem thêm</a>
+          </div>
+          <div class="explore-cards">
+            <a class="explore-card" href="#">
+              <div class="media"><img src="image/11.png" alt="10 font chữ cho Website đẹp nhất 2025 - 2026" /></div>
+              <div class="card-title">10 font chữ cho Website đẹp nhất 2025 - 2026</div>
+            </a>
+            <a class="explore-card" href="#">
+              <div class="media"><img src="image/12.png" alt="10 trang Web khóa học online uy tín 2025" /></div>
+              <div class="card-title">10 trang Web khóa học online uy tín 2025</div>
+            </a>
+            <a class="explore-card" href="#">
+              <div class="media"><img src="image/13.png" alt="Cách tải Photoshop cho Macbook" /></div>
+              <div class="card-title">Cách tải Photoshop cho Macbook</div>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <!-- Follow banner -->
+      <section id="follow" class="follow section" aria-label="Theo dõi hành trình thiết kế">
+        <div class="follow-hero">
+          <div class="follow-inner container">
+            <h2 class="follow-title">Hãy theo dõi chúng tôi trên<br />hành trình thiết kế</h2>
+            <a class="follow-link" href="#">Xem thêm</a>
+          </div>
+        </div>
+      </section>
+
+
+
+  </script>
+  <footer class="site-footer" aria-label="Thông tin Lazada">
+    <div class="footer-top">
+      <div class="footer-highlight">
+        <div class="icon">🏬</div>
+        <div class="text"><div class="title" data-i18n="Hệ thống gian hàng chính hãng">Hệ thống gian hàng chính hãng</div><div class="sub" data-i18n="Uy tín - đa dạng - giá tốt">Uy tín - đa dạng - giá tốt</div></div>
       </div>
-    </footer>
+      <div class="footer-highlight">
+        <div class="icon">🚚</div>
+        <div class="text"><div class="title" data-i18n="Giao hàng nhanh">Giao hàng nhanh</div><div class="sub" data-i18n="Toàn quốc, theo dõi đơn dễ dàng">Toàn quốc, theo dõi đơn dễ dàng</div></div>
+      </div>
+      <div class="footer-highlight">
+        <div class="icon">↩️</div>
+        <div class="text"><div class="title" data-i18n="Đổi trả linh hoạt">Đổi trả linh hoạt</div><div class="sub" data-i18n="Miễn phí trong 15 ngày">Miễn phí trong 15 ngày</div></div>
+      </div>
+      <div class="footer-highlight">
+        <div class="icon">🔒</div>
+        <div class="text"><div class="title" data-i18n="Thanh toán an toàn">Thanh toán an toàn</div><div class="sub" data-i18n="Nhiều hình thức, bảo mật">Nhiều hình thức, bảo mật</div></div>
+      </div>
+    </div>
+    <div class="footer-main">
+      <div class="footer-col">
+        <div class="col-title" data-i18n="Trợ giúp">Trợ giúp</div>
+        <ul>
+          <li><a href="#" data-i18n="Trung tâm hỗ trợ">Trung tâm hỗ trợ</a></li>
+          <li><a href="#" data-i18n="Hướng dẫn mua hàng">Hướng dẫn mua hàng</a></li>
+          <li><a href="#" data-i18n="Theo dõi đơn hàng">Theo dõi đơn hàng</a></li>
+          <li><a href="#" data-i18n="Chính sách đổi trả">Chính sách đổi trả</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <div class="col-title" data-i18n="Về Lazada">Về Lazada</div>
+        <ul>
+          <li><a href="#" data-i18n="Giới thiệu">Giới thiệu</a></li>
+          <li><a href="#" data-i18n="Tuyển dụng">Tuyển dụng</a></li>
+          <li><a href="#" data-i18n="Điều khoản sử dụng">Điều khoản sử dụng</a></li>
+          <li><a href="#" data-i18n="Bảo mật thông tin">Bảo mật thông tin</a></li>
+          <li><a href="#" data-i18n="ĐÂY LÀ ĐỒ ÁN MÔN HỌC, KHÔNG SỬ DỤNG VỚI MỤC ĐÍCH THƯƠNG MẠI">ĐÂY LÀ ĐỒ ÁN MÔN HỌC, KHÔNG SỬ DỤNG VỚI MỤC ĐÍCH THƯƠNG MẠI</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <div class="col-title" data-i18n="Liên hệ">Liên hệ</div>
+        <ul>
+          <li>Email: support@lazada.vn</li>
+          <li>Hotline: 1900 1000</li>
+          <li>8:00 - 22:00 (T2 - CN)</li>
+        </ul>
+        <div class="socials" aria-label="Mạng xã hội">
+          <a class="social fb" href="#" aria-label="Facebook" title="Facebook">
+            <svg viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"><path fill="currentColor" d="M22 12.06C22 6.5 17.52 2 12 2S2 6.5 2 12.06C2 17.08 5.66 21.21 10.44 22v-7.01H7.9v-2.93h2.54V9.85c0-2.51 1.49-3.9 3.77-3.9 1.09 0 2.23.2 2.23.2v2.45h-1.25c-1.23 0-1.62.77-1.62 1.56v1.87h2.76l-.44 2.93h-2.32V22C18.34 21.21 22 17.08 22 12.06Z"/></svg>
+          </a>
+          <a class="social ig" href="#" aria-label="Instagram" title="Instagram">
+            <svg viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"><path fill="currentColor" d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7m5 3a5 5 0 1 1 0 10a5 5 0 0 1 0-10m0 2.2a2.8 2.8 0 1 0 0 5.6a2.8 2.8 0 0 0 0-5.6M18 6.5a1 1 0 1 1 0 2a1 1 0 0 1 0-2Z"/></svg>
+          </a>
+          <a class="social tt" href="#" aria-label="TikTok" title="TikTok">
+            <svg viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"><path fill="currentColor" d="M21 8.5v3.02a8.53 8.53 0 0 1-4.8-1.54v6.27a5.75 5.75 0 1 1-5.75-5.75c.25 0 .5.02.73.06v3.12a2.65 2.65 0 1 0 1.81 2.51V2.98h3.03a4.85 4.85 0 0 0 4.98 4.85Z"/></svg>
+          </a>
+        </div>
+      </div>
+      <div class="footer-col">
+        <div class="col-title" data-i18n="Đăng ký nhận tin">Đăng ký nhận tin</div>
+        <div class="newsletter">
+          <input type="email" data-i18n-placeholder="Nhập email của bạn" placeholder="Nhập email của bạn" aria-label="Email">
+          <button data-i18n="Đăng ký">Đăng ký</button>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="container" data-i18n="© 2025 Lazada — Một dự án demo giao diện.">© 2025 Lazada — Một dự án demo giao diện.</div>
+    </div>
+  </footer>
 
     <script defer src="script.js"></script>
   </body>
