--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;800;900&family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -63,24 +64,175 @@
       </section>
 
       <section id="about" class="about section">
+    <div class="container">
+        <div class="about-welcome text-center reveal">
+            <h2 class="welcome-title">DaIU xin chào</h2>
+            <p class="lead">
+                Chào mừng bạn đến với DaIU – Đơn vị chuyên cung cấp giải pháp thiết kế giao diện người dùng (UI) đột phá. Chúng tôi sẵn sàng đồng hành cùng doanh nghiệp bạn chuyển hóa ý tưởng thành sản phẩm số trực quan, hiện đại và tối ưu trải nghiệm người dùng. Hãy cùng chúng tôi kiến tạo hình ảnh số chuyên nghiệp và bền vững.
+            </p>
+        </div>
+
+        <div class="about-overview reveal">
+            <div class="overview-copy">
+                <h3 class="section-subtitle">Tổng quan</h3>
+                <p>DaIU cung cấp dịch vụ thiết kế giao diện người dùng (UI). Chúng tôi đồng hành cùng doanh nghiệp, chuyển hóa ý tưởng sản phẩm thành giao diện trực quan, hiện đại và dễ sử dụng, giúp nâng cao thương hiệu và rút ngắn thời gian triển khai sản phẩm. Với tinh thần đổi mới, DaIU hướng đến việc tạo nên những chuẩn mực giao diện mang tính ứng dụng cao và bền vững trong môi trường số.</p>
+            </div>
+            <div class="overview-art">
+                <img src="image/16.png" alt="Tổng quan về DaIU" />
+            </div>
+        </div>
+
+        <div class="why-choose-us reveal">
+            <h2 class="section-title text-center">TẠI SAO CHỌN DAIU?</h2>
+            <p class="lead text-center">Giao diện <strong>chuyên nghiệp</strong> tạo ấn tượng thị giác và thể hiện đẳng cấp thương hiệu. DaIU chuyển hóa <strong>ý tưởng</strong> thành <strong>giao diện hiện đại</strong>, trực quan, đồng bộ – giúp doanh nghiệp khẳng định bản sắc và <strong>nâng tầm hình ảnh</strong> trên nền tảng số.</p>
+            <div class="features">
+                <div class="feature">
+                    <div class="feature-icon">◎</div>
+                    <h3 class="feature-title">Chuẩn thương hiệu</h3>
+                    <p class="feature-desc">Màu sắc, kiểu chữ và lưới thiết kế thống nhất theo guideline.</p>
+                </div>
+                <div class="feature">
+                    <div class="feature-icon">↗</div>
+                    <h3 class="feature-title">Tối ưu trải nghiệm</h3>
+                    <p class="feature-desc">Dễ dùng, dễ nhìn, dòng chảy thao tác mượt trên mọi thiết bị.</p>
+                </div>
+                <div class="feature">
+                    <div class="feature-icon">★</div>
+                    <h3 class="feature-title">Tinh tế & hiện đại</h3>
+                    <p class="feature-desc">Hiệu ứng vừa phải, nhấn mạnh điểm quan trọng, không rối mắt.</p>
+                </div>
+            </div>
+        </div>
+        <div class="about-mission-vision reveal">
+            <div class="mission-card">
+                <h3 class="section-subtitle">Sứ mệnh</h3>
+                <p>Sử dụng năng lực thiết kế giao diện người dùng (UI) để chuyển hóa triệt để ý tưởng sản phẩm số thành tài sản kỹ thuật số trực quan, tối ưu và có tính ứng dụng cao, qua đó thúc đẩy sự tăng trưởng và vị thế cạnh tranh của doanh nghiệp trên thị trường số.</p>
+            </div>
+            <div class="vision-card">
+                <h3 class="section-subtitle">Tầm nhìn</h3>
+                <p>Trở thành đơn vị tiên phong và là lựa chọn chiến lược hàng đầu về thiết kế UI tại thị trường trong nước và khu vực, thiết lập nên các chuẩn mực mới về giao diện kỹ thuật số bền vững, góp phần quan trọng vào quá trình phát triển sản phẩm số của đối tác.</p>
+            </div>
+        </div>
+        
+        <div class="about-timeline reveal">
+            <h3 class="section-subtitle text-center">Lịch sử phát triển</h3>
+            <div class="timeline-container">
+                <div class="timeline-item" data-year="//2025">
+                    <div class="timeline-image">
+                        <img src="https://i.postimg.cc/k4G6Vw17/timeline-1.png" alt="Năm 2025">
+                    </div>
+                </div>
+                <div class="timeline-item" data-year="20xx">
+                    <div class="timeline-image">
+                        <img src="https://i.postimg.cc/Hnpy60w4/timeline-2.png" alt="Năm 20xx">
+                    </div>
+                </div>
+                <div class="timeline-item" data-year="20xx">
+                    <div class="timeline-image">
+                        <img src="https://i.postimg.cc/J0kY38Yv/timeline-3.png" alt="Năm 20xx">
+                    </div>
+                </div>
+            </div>
+            <div class="timeline-line">
+                <span class="timeline-dot"></span>
+                <span class="timeline-dot"></span>
+                <span class="timeline-dot"></span>
+            </div>
+        </div>
+
+        <div class="about-team reveal">
+    <h3 class="section-subtitle text-center">OUR LEADER</h3>
+    <div class="swiper team-slider">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <div class="team-card">
+                    <div class="team-card-header">◇&nbsp;&nbsp;◇&nbsp;&nbsp;◇</div>
+                    <img src="image/Member/1.jpg" alt="Thành viên 1">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="team-card">
+                    <div class="team-card-header">◇&nbsp;&nbsp;◇&nbsp;&nbsp;◇</div>
+                    <img src="image/Member/2.jpg" alt="Thành viên 2">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="team-card">
+                    <div class="team-card-header">◇&nbsp;&nbsp;◇&nbsp;&nbsp;◇</div>
+                    <img src="image/Member/3.jpg" alt="Thành viên 3">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="team-card">
+                    <div class="team-card-header">◇&nbsp;&nbsp;◇&nbsp;&nbsp;◇</div>
+                    <img src="image/Member/4.jpg" alt="Thành viên 4">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="team-card">
+                    <div class="team-card-header">◇&nbsp;&nbsp;◇&nbsp;&nbsp;◇</div>
+                    <img src="image/Member/5.jpg" alt="Thành viên 5">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="team-card">
+                    <div class="team-card-header">◇&nbsp;&nbsp;◇&nbsp;&nbsp;◇</div>
+                    <img src="image/Member/6.jpg" alt="Thành viên 6">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="team-card">
+                    <div class="team-card-header">◇&nbsp;&nbsp;◇&nbsp;&nbsp;◇</div>
+                    <img src="image/Member/7.jpg" alt="Thành viên 7">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="team-card">
+                    <div class="team-card-header">◇&nbsp;&nbsp;◇&nbsp;&nbsp;◇</div>
+                    <img src="image/Member/8.jpg" alt="Thành viên 8">
+                </div>
+            </div>
+              <div class="swiper-slide">
+                <div class="team-card">
+                    <div class="team-card-header">◇&nbsp;&nbsp;◇&nbsp;&nbsp;◇</div>
+                    <img src="image/Member/9.jpg" alt="Thành viên 9">
+                </div>
+            </div>
+        </div>
+        <div class="swiper-pagination"></div>
+    </div>
+</div>
+    </div>
+</section>
+
+<section class="about-cta-banner section reveal">
+    <div class="container cta-content">
+    <h2>BẠN ĐÃ SẴN SÀNG KHỞI ĐỘNG DỰ ÁN CỦA MÌNH NGAY HÔM NAY CHƯA?</h2>
+    <a href="#contact" class="cta-link">LIÊN HỆ NGAY</a>
+    </div>
+</section>
+
+      <section id="services" class="services section">
         <div class="container">
-          <h2 class="section-title">TẠI SAO CHỌN DAIU?</h2>
-          <p class="lead">Giao diện <strong>chuyên nghiệp</strong> tạo ấn tượng thị giác và thể hiện đẳng cấp thương hiệu. DaIU chuyển hóa <strong>ý tưởng</strong> thành <strong>giao diện hiện đại</strong>, trực quan, đồng bộ – giúp doanh nghiệp khẳng định bản sắc và <strong>nâng tầm hình ảnh</strong> trên nền tảng số.</p>
-          <div class="features">
-            <div class="feature">
-              <div class="feature-icon">◎</div>
-              <h3 class="feature-title">Chuẩn thương hiệu</h3>
-              <p class="feature-desc">Màu sắc, kiểu chữ và lưới thiết kế thống nhất theo guideline.</p>
-            </div>
-            <div class="feature">
-              <div class="feature-icon">↗</div>
-              <h3 class="feature-title">Tối ưu trải nghiệm</h3>
-              <p class="feature-desc">Dễ dùng, dễ nhìn, dòng chảy thao tác mượt trên mọi thiết bị.</p>
-            </div>
-            <div class="feature">
-              <div class="feature-icon">★</div>
-              <h3 class="feature-title">Tinh tế & hiện đại</h3>
-              <p class="feature-desc">Hiệu ứng vừa phải, nhấn mạnh điểm quan trọng, không rối mắt.</p>
+          <h2 class="section-title">DỊCH VỤ</h2>
+          <div class="service-grid">
+            <div class="grid-services">
+              <a class="service-card" href="#" aria-label="Website">
+                <div class="media"><img src="image/7.jpg" alt="Website" /></div>
+                <div class="overlay"><h3>Website</h3></div>
+              </a>
+              <a class="service-card" href="#" aria-label="Portfolio & Branding">
+                <div class="media"><img src="image/8.png" alt="Portfolio & Branding" /></div>
+                <div class="overlay"><h3>Portfolio & Branding</h3></div>
+              </a>
+              <a class="service-card" href="#" aria-label="Profile & Catalogue">
+                <div class="media"><img src="image/9.jpg" alt="Profile & Catalogue" /></div>
+                <div class="overlay"><h3>Profile & Catalogue</h3></div>
+              </a>
+              <a class="service-card" href="#" aria-label="Marketing">
+                <div class="media"><img src="image/10.png" alt="Marketing" /></div>
+                <div class="overlay"><h3>Marketing</h3></div>
+              </a>
             </div>
           </div>
         </div>
@@ -139,32 +291,6 @@
         <div class="container">
           <div class="video-frame">
             <video class="video" src="image/7120350830604.mp4"  controls playsinline preload="metadata"></video>
-          </div>
-        </div>
-      </section>
-
-      <section id="services" class="services section">
-        <div class="container">
-          <h2 class="section-title">DỊCH VỤ</h2>
-          <div class="service-grid">
-            <div class="grid-services">
-              <a class="service-card" href="#" aria-label="Website">
-                <div class="media"><img src="image/7.jpg" alt="Website" /></div>
-                <div class="overlay"><h3>Website</h3></div>
-              </a>
-              <a class="service-card" href="#" aria-label="Portfolio & Branding">
-                <div class="media"><img src="image/8.png" alt="Portfolio & Branding" /></div>
-                <div class="overlay"><h3>Portfolio & Branding</h3></div>
-              </a>
-              <a class="service-card" href="#" aria-label="Profile & Catalogue">
-                <div class="media"><img src="image/9.jpg" alt="Profile & Catalogue" /></div>
-                <div class="overlay"><h3>Profile & Catalogue</h3></div>
-              </a>
-              <a class="service-card" href="#" aria-label="Marketing">
-                <div class="media"><img src="image/10.png" alt="Marketing" /></div>
-                <div class="overlay"><h3>Marketing</h3></div>
-              </a>
-            </div>
           </div>
         </div>
       </section>
@@ -234,9 +360,6 @@
         </div>
       </section>
 
-
-
-  </script>
   <footer class="site-footer" aria-label="Thông tin Lazada">
     <div class="footer-top">
       <div class="footer-highlight">
